搭建首页面板

--- a/src/styles/mixin.scss
+++ b/src/styles/mixin.scss
@@ -13,3 +13,5 @@ $router-h-active-color: #009688; // 鼠标放上路由高亮色
 $head-color: #A9B7B7; // 头部字体色
 $bg: #F2F2F2; // body背景色
 $form-bg: #fff; // 登录、注册、找回密码表单背景色
+$comment-info-color: #919091; // 评论字体颜色
+ $praise: #FF5722; // 点赞色 
